[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprite/Outside.png" type="Texture" id=1]
[ext_resource path="res://sprite/ven.png" type="Texture" id=2]
[ext_resource path="res://scenes/outside.gd" type="Script" id=3]
[ext_resource path="res://scenes/FloorMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/WallMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprite/birdsoutside.png" type="Texture" id=6]
[ext_resource path="res://sprite/oustsidewell.png" type="Texture" id=7]
[ext_resource path="res://themes/sliptheme.tres" type="Theme" id=8]
[ext_resource path="res://scenes/speedButton.gd" type="Script" id=9]
[ext_resource path="res://scenes/jumpboostButton.gd" type="Script" id=10]
[ext_resource path="res://scenes/coinlabel.gd" type="Script" id=11]
[ext_resource path="res://sprite/drink.png" type="Texture" id=12]
[ext_resource path="res://sprite/shoe.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 53.5422
height = 192.868

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44.9521, 63.5602 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.00767827, -1.144 )
scale = Vector2( 2.51536, 2.428 )
frames = SubResource( 1 )
offset = Vector2( 204, 123 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 398.25, 438.279 )
scale = Vector2( 1.15295, 1.10067 )
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Sprite"]
visible = false
margin_left = -108.0
margin_top = -394.0
margin_right = 411.0
margin_bottom = -28.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Sprite/Panel"]
margin_left = 128.0
margin_top = 3.0
margin_right = 396.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Panel/Panel"]
anchor_right = 0.077
anchor_bottom = 0.06
margin_left = -2.0
margin_top = -2.51367
margin_right = 228.037
margin_bottom = 55.5263
text = "SHOP"
align = 1
valign = 1

[node name="Button" type="Button" parent="Sprite/Panel"]
margin_left = 17.0
margin_top = 90.0
margin_right = 492.0
margin_bottom = 214.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Sprite/Panel/Button"]
position = Vector2( 57.3091, 49.3668 )
scale = Vector2( 1.5628, 1.5628 )
texture = ExtResource( 12 )
hframes = 5
frame = 4

[node name="Label" type="Label" parent="Sprite/Panel/Button"]
margin_left = 80.0
margin_top = 19.0
margin_right = 355.0
margin_bottom = 87.0
text = "Speed juice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="costLabel" type="Label" parent="Sprite/Panel/Button/Label"]
margin_left = 284.432
margin_top = -5.51363
margin_right = 386.432
margin_bottom = 85.4864
text = "+1
10c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Sprite/Panel"]
margin_left = 18.0
margin_top = 219.0
margin_right = 493.0
margin_bottom = 338.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Sprite/Panel/Button2"]
position = Vector2( 67.8867, 57.4074 )
scale = Vector2( 1.5628, 1.5628 )
texture = ExtResource( 13 )
hframes = 5

[node name="Label" type="Label" parent="Sprite/Panel/Button2"]
margin_left = 81.9727
margin_top = 19.8108
margin_right = 337.973
margin_bottom = 70.8108
text = "Jump shoes"

[node name="costLabel" type="Label" parent="Sprite/Panel/Button2/Label"]
margin_left = 283.649
margin_top = -9.89203
margin_right = 385.649
margin_bottom = 81.108
text = "+1
10c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Panel"]
margin_left = 8.32446
margin_top = 23.7841
margin_right = 127.324
margin_bottom = 67.7841
text = "coins"
script = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 10.6908, 31.1815 )
shape = SubResource( 2 )

[node name="FloorMap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 1048577, 0, 1, 1048608, 0, 0, 1048609, 0, 2, 1179695, 0, 1, 1245231, 0, 1, 1310767, 0, 1, 1376303, 0, 1, 1441839, 0, 1, 1507375, 0, 1, 1572911, 0, 1, 1638446, 0, 1, 1703982, 0, 1, 1769518, 0, 1, 1835054, 0, 1, 1900576, 0, 1, 1900590, 0, 1, 1966126, 0, 1, 2031662, 0, 1, 2097184, 0, 1, 2162744, 0, 0, 2162745, 0, 1, 2162746, 0, 1, 2162747, 0, 1, 2162748, 0, 1, 2162749, 0, 1, 2162750, 0, 1, 2162751, 0, 2, 2228279, 0, 1, 2293812, 0, 1, 2293813, 0, 1, 2293814, 0, 2, 2359296, 0, 1, 2359297, 0, 1, 2359298, 0, 1, 2359299, 0, 1, 2359300, 536870912, 1, 2359301, 536870912, 1, 2359302, 536870912, 1, 2359303, 536870912, 1, 2359304, 536870912, 1, 2359305, 536870912, 1, 2359306, 536870912, 1, 2359307, 536870912, 1, 2359308, 536870912, 1, 2359309, 536870912, 1, 2359310, 536870912, 1, 2359311, 536870912, 1, 2359312, 536870912, 1, 2359313, 536870912, 1, 2359314, 536870912, 1, 2359315, 536870912, 1, 2359316, 536870912, 1, 2359317, 536870912, 1, 2359318, 536870912, 1, 2359319, 536870912, 1, 2359320, 536870912, 1, 2359321, 536870912, 1, 2359322, 536870912, 1, 2359323, 536870912, 1, 2359324, 536870912, 1, 2359325, 536870912, 1, 2359326, 536870912, 1, 2359327, 536870912, 1, 2359328, 536870912, 1, 2359329, 536870912, 1, 2359330, 0, 1, 2359331, 0, 1, 2359348, 0, 1, 2424832, 0, 1, 2424833, 0, 1, 2424834, 0, 1, 2424835, 0, 1, 2424836, 0, 1, 2424837, 0, 1, 2424838, 0, 1, 2424839, 0, 1, 2424840, 0, 1, 2424841, 0, 1, 2424842, 0, 1, 2424843, 0, 1, 2424844, 0, 1, 2424845, 0, 1, 2424846, 0, 1, 2424847, 0, 1, 2424848, 0, 1, 2424849, 0, 1, 2424850, 0, 1, 2424851, 0, 1, 2424852, 0, 1, 2424853, 0, 1, 2424854, 0, 1, 2424855, 0, 1, 2424856, 0, 1, 2424857, 0, 1, 2424858, 0, 1, 2424859, 0, 1, 2424860, 0, 1, 2424861, 0, 1, 2424862, 0, 1, 2424863, 0, 1, 2424864, 0, 1, 2424865, 0, 1, 2424866, 0, 1, 2424867, 0, 1, 2424868, 0, 1, 2424869, 0, 1, 2424870, 0, 1, 2424871, 0, 1, 2424872, 0, 1, 2424873, 0, 1, 2424874, 0, 1, 2424875, 0, 1, 2424876, 0, 1, 2424877, 0, 1, 2424878, 0, 1, 2424879, 0, 1, 2424880, 0, 1, 2424881, 0, 1, 2424882, 0, 1, 2424883, 0, 1, 2424884, 0, 1, 2424885, 0, 1, 2424886, 0, 1, 2424887, 0, 1, 2424888, 0, 1, 2424889, 0, 1, 2424890, 0, 1, 2424891, 0, 1, 2424892, 0, 1, 2424893, 0, 1, 2424894, 0, 1, 2424895, 0, 1, 2424896, 0, 2, 2490384, 0, 1, 2490385, 0, 1, 2490386, 0, 1, 2490387, 0, 1, 2490388, 0, 1, 2490389, 0, 1, 2490390, 0, 1, 2490391, 0, 1, 2490392, 0, 1, 2490393, 0, 1, 2490394, 0, 1, 2490409, 0, 1, 2490410, 0, 1, 2490411, 0, 1, 2490412, 0, 1, 2490413, 0, 1, 2490414, 0, 1, 2490415, 0, 1, 2490416, 0, 1, 2490417, 0, 1, 2490418, 0, 1, 2490419, 0, 1, 2490420, 0, 1, 2490421, 0, 1, 2490422, 0, 1, 2490423, 0, 1, 2490424, 0, 1, 2490425, 0, 1, 2490426, 0, 1, 2490427, 0, 1, 2490428, 0, 1, 2490429, 0, 1, 2490430, 0, 1, 2490431, 0, 1, 2555930, 0, 1, 2555931, 0, 1, 2555932, 0, 1, 2555933, 0, 1, 2555934, 0, 1, 2555935, 0, 1, 2555936, 0, 1, 2555937, 0, 1, 2555938, 0, 1, 2555939, 0, 1, 2555940, 0, 1, 2555941, 0, 1, 2555942, 0, 1, 2555943, 0, 1, 2555944, 0, 1, 2555945, 0, 1, 2818050, 536870912, 1, 2818051, 536870912, 1, 2818052, 536870912, 1, 2818053, 536870912, 1, 2818054, 536870912, 1, 2818055, 536870912, 1, 2818056, 536870912, 1, 2818057, 536870912, 1, 2818058, 536870912, 1, 2818059, 536870912, 1, 2818060, 536870912, 1, 2818061, 536870912, 1, 2818062, 536870912, 1, 2818063, 536870912, 1, 2818064, 536870912, 1, 2818065, 536870912, 1, 2818066, 536870912, 1, 2818067, 536870912, 1, 2818068, 536870912, 1, 2818069, 536870912, 1, 2818070, 536870912, 1, 2818071, 536870912, 1, 2818072, 536870912, 1, 2818073, 536870912, 1, 2818074, 536870912, 1, 2818075, 536870912, 1, 2818076, 536870912, 1, 2818077, 536870912, 1, 2818078, 536870912, 1, 2818079, 536870912, 1, 2818080, 536870912, 1, 2818081, 536870912, 1, 2818082, 536870912, 1, 2818083, 536870912, 1, 2818084, 536870912, 1, 2818085, 536870912, 1, 2818086, 536870912, 1, 2818087, 536870912, 1, 2818088, 536870912, 1, 2818089, 536870912, 1, 2818090, 536870912, 1, 2818091, 536870912, 1, 2818092, 536870912, 1, 2818093, 536870912, 1, 2818094, 536870912, 1, 2818095, 536870912, 1, 2818096, 536870912, 1, 2818097, 536870912, 1, 2818098, 536870912, 1, 2818099, 536870912, 1, 2818100, 536870912, 1, 2818101, 536870912, 1, 2818102, 536870912, 1, 2818103, 536870912, 1, 2818104, 536870912, 1, 2818105, 536870912, 1, 2818106, 536870912, 1, 2818107, 536870912, 1, 2818108, 536870912, 1, 2818109, 536870912, 1, 2818110, 536870912, 1, 2818111, 536870912, 1 )

[node name="WallMapscriptlesss" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( -1, 0, 0, 65534, 0, 0, 65535, 0, 0, 32, 0, 0, 36, 0, 0, 131070, 0, 0, 131071, 0, 0, 65568, 0, 0, 65572, 0, 0, 196606, 0, 0, 196607, 0, 0, 131104, 0, 0, 131108, 0, 0, 262143, 0, 0, 196640, 0, 0, 196644, 0, 0, 327679, 0, 0, 262176, 0, 0, 262177, 0, 0, 262179, 0, 0, 262180, 0, 0, 393215, 0, 0, 327712, 0, 0, 327713, 0, 0, 327715, 0, 0, 458751, 0, 0, 393248, 0, 0, 393251, 0, 0, 524287, 0, 0, 458784, 0, 0, 458787, 0, 0 )
script = null

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 662.814, 508.935 )
scale = Vector2( 2.515, 2.428 )
texture = ExtResource( 6 )
hframes = 7
frame = 6

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 136.488, 512.643 )
scale = Vector2( 2.515, 2.428 )
texture = ExtResource( 7 )
hframes = 3
frame = 1

[node name="door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2( 983.1, 459.116 )
shape = SubResource( 3 )
[connection signal="pressed" from="Sprite/Panel/Button" to="Sprite/Panel/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite/Panel/Button2" to="Sprite/Panel/Button2" method="_on_Button2_pressed"]
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="door" to="." method="_on_door_body_entered"]
